--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,6 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile.fedora27
           push: false
           load: true
@@ -62,6 +63,7 @@ jobs:
           file: ./Dockerfile.fedora27
           push: true
           load: false
+          platforms: linux/amd64,linux/arm64
           tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-fedora27,dpokidov/imagemagick:latest-fedora27
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
