--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,7 +35,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile.fedora27
           push: false
           load: true
@@ -56,7 +55,7 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
       - name: Push Fedora image
         id: docker_push_fedora
-        if: ${{ github.event_name == 'release' }}
+#        if: ${{ github.event_name == 'release' }}
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -64,7 +63,7 @@ jobs:
           push: true
           load: false
           platforms: linux/amd64,linux/arm64
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-fedora27,dpokidov/imagemagick:latest-fedora27
+          tags: dpokidov/imagemagick:testarm-fedora27,dpokidov/imagemagick:testarm-fedora27
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       - name: Build Debian Buster Image
