--- a/Dockerfile.fedora27
+++ b/Dockerfile.fedora27
@@ -8,10 +8,9 @@ RUN dnf -y install https://download1.rpmfusion.org/free/fedora/rpmfusion-free-re
 WORKDIR /opt
 
 RUN yum install -y libtool-ltdl libjpeg libjpeg-devel libpng libpng-devel libtiff libtiff-devel libwebp libwebp-devel LibRaw LibRaw-devel jxrlib git make automake gcc pkgconf ghostscript-core libxml2-devel fontconfig-devel freetype-devel && \
-    git clone https://github.com/ImageMagick/ImageMagick.git && \
-    cd ImageMagick
+    git clone https://github.com/ImageMagick/ImageMagick.git
 
-RUN git checkout ${IM_VERSION}
+RUN cd ImageMagick && git checkout ${IM_VERSION}
 RUN ./configure
 RUN make && make install && \
     cd ../ && \
