--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,29 +30,29 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      - name: Build Fedora image
-        id: docker_build_fedora
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.fedora27
-          push: false
-          load: true
-          tags: im-fedora27
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Fedora Image
-        run: |
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg jxr:/imgs/test-jpg.jxr
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
-          docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+#      - name: Build Fedora image
+#        id: docker_build_fedora
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.fedora27
+#          push: false
+#          load: true
+#          tags: im-fedora27
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Testing Fedora Image
+#        run: |
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 500 /imgs/test.jpg jxr:/imgs/test-jpg.jxr
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png /imgs/test-resize.png
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 100 /imgs/test.png jxr:/imgs/test-png.jxr
+#          docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.pdf /imgs/test-pdf.png
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+#          docker run --rm -v $(pwd):/imgs im-fedora27 -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+#          docker run --rm -v $(pwd):/imgs im-fedora27 /imgs/test.jpg -antialias -font NimbusRoman-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
       - name: Push Fedora image
         id: docker_push_fedora
 #        if: ${{ github.event_name == 'release' }}
@@ -62,118 +62,118 @@ jobs:
           file: ./Dockerfile.fedora27
           push: true
           load: false
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           tags: dpokidov/imagemagick:testarm-fedora27,dpokidov/imagemagick:testarm-fedora27
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Build Debian Buster Image
-        id: docker_build_buster
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.buster
-          push: false
-          load: true
-          tags: im-buster
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Debian Buster Image
-        run: |
-          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-buster /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
-      - name: Push Debian Buster image
-        id: docker_push_buster
-        if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.buster
-          push: true
-          load: false
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }},dpokidov/imagemagick:${{ github.event.release.tag_name }}-buster,dpokidov/imagemagick:latest-buster,dpokidov/imagemagick:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Build Debian Bullseye Image
-        id: docker_build_bullseye
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.bullseye
-          push: false
-          load: true
-          tags: im-bullseye
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Debian Bullseye Image
-        run: |
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
-      - name: Push Debian Bullseye image
-        id: docker_push_bullseye
-        if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.bullseye
-          push: true
-          load: false
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-bullseye,dpokidov/imagemagick:latest-bullseye
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Build Ubuntu Image
-        id: docker_build_ubuntu
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.ubuntu
-          push: false
-          load: true
-          tags: im-ubuntu
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Testing Ubuntu Image
-        run: |
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png /imgs/test-resize.png
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png webp:/imgs/test-png.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png avif:/imgs/test-png.avif
-          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.pdf /imgs/test-pdf.png
-          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
-          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
-          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
-      - name: Push Ubuntu image
-        id: docker_push_ubuntu
-        if: ${{ github.event_name == 'release' }}
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile.ubuntu
-          push: true
-          load: false
-          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Build Debian Buster Image
+#        id: docker_build_buster
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.buster
+#          push: false
+#          load: true
+#          tags: im-buster
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Testing Debian Buster Image
+#        run: |
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png /imgs/test-resize.png
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+#          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.pdf /imgs/test-pdf.png
+#          docker run --rm -v $(pwd):/imgs im-buster /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+#          docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+#          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.jpg -antialias -font Helvetica-Bold -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+#      - name: Push Debian Buster image
+#        id: docker_push_buster
+#        if: ${{ github.event_name == 'release' }}
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.buster
+#          push: true
+#          load: false
+#          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }},dpokidov/imagemagick:${{ github.event.release.tag_name }}-buster,dpokidov/imagemagick:latest-buster,dpokidov/imagemagick:latest
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Build Debian Bullseye Image
+#        id: docker_build_bullseye
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.bullseye
+#          push: false
+#          load: true
+#          tags: im-bullseye
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Testing Debian Bullseye Image
+#        run: |
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png /imgs/test-resize.png
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+#          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.pdf /imgs/test-pdf.png
+#          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+#          docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+#          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+#      - name: Push Debian Bullseye image
+#        id: docker_push_bullseye
+#        if: ${{ github.event_name == 'release' }}
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.bullseye
+#          push: true
+#          load: false
+#          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-bullseye,dpokidov/imagemagick:latest-bullseye
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Build Ubuntu Image
+#        id: docker_build_ubuntu
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.ubuntu
+#          push: false
+#          load: true
+#          tags: im-ubuntu
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
+#      - name: Testing Ubuntu Image
+#        run: |
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png /imgs/test-resize.png
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+#          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.pdf /imgs/test-pdf.png
+#          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+#          docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+#          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+#      - name: Push Ubuntu image
+#        id: docker_push_ubuntu
+#        if: ${{ github.event_name == 'release' }}
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Dockerfile.ubuntu
+#          push: true
+#          load: false
+#          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-ubuntu,dpokidov/imagemagick:latest-ubuntu
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache
